allowedRepo/violation.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: busybox-restricted-repo
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: busybox
  template:
    metadata:
      labels:
        app: busybox
    spec:
      containers:
      - name: busybox
        image: docker.io/busybox
        imagePullPolicy: Always
        args:
        - bin/sh
        - -c
        - "sleep 1000000"
